# leettools

./: .cursorrules  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  dev-requirements.txt  env.ollama  env.template  llm_genai_news.md  pyproject.toml  requirements-dev.txt  requirements-ext.txt  requirements.txt
.github/workflows/: build_llmeds_app.yml  test-on-merge.yml
docker/: Dockerfile  Dockerfile.prod.template  README.md  build.sh  docker-compose.yml  docker_util.sh  dockerignore.template  env.template  gen_docker.py  gen_dockerfile.py  start.sh  start_docker.sh  start_single_docker.sh  stop.sh
docs/: company.py  deepseek.md  documentation.md  flow-answer.md  flow-digest.md  flow-news.md  run_deepsearch_with_firework_deepseek.md  run_local_service.md  run_ollama_with_deepseek_r1.md  sample_url_list.txt  use_firecrawl.md
docs/assets/: process-digest.drawio
docs/examples/: llm_genai_news.md  nbanews.md  ollama.md
docs/examples/deepseek/: aijob.fireworks.md
docs/examples/openai/: README.md
docs/sample_outputs/: README.md  aijob.md  aimarket.md  interview.md
eval/: Readme.md  download_financebench.sh  eval-v2.py  eval.py  eval_benchmarks.py  eval_package_structure.md  eval_simple.py  evaluation-on-benchmarks.md  pytest.ini
eval/data_preprocess/: base_dataset.py  config.py  financebench_loader.py
eval/strategies/: hybrid_embed.json  simple_embed.json
eval/test/: conftest.py
eval/test/data_preprocess/: test_financebench_loader.py
eval/utils/: standalone_pipeline.py  utils.py
scripts/: leet  log_postprocess.sh  run.sh  show_lib_size.sh
src/experiments/firecrawl/: firecrawl_search.py
src/leettools/: context_manager.py  requirements.txt  settings.py
src/leettools/chat/: chat_utils.py  history_manager.py
src/leettools/chat/schemas/: chat_history.py
src/leettools/cli/: cli.py  cli_utils.py  options_common.py
src/leettools/cli/doc/: doc_list.py  doc_list_all_segments.py  doc_list_segments.py  doc_print.py  doc_summarize.py
src/leettools/cli/docsink/: docsink_list.py
src/leettools/cli/docsrc/: docsrc_ingest.py  docsrc_list.py
src/leettools/cli/flow/: flow_cli.py
src/leettools/cli/kb/: kb_add_local.py  kb_add_local_dir.py  kb_add_search.py  kb_add_url.py  kb_add_url_list.py  kb_cli.py  kb_create.py  kb_crud.py  kb_info.py  kb_ingest.py  kb_list.py  kb_list_db.py
src/leettools/cli/llm/: llm_inference.py
src/leettools/cli/query/: query_section_regen.py
src/leettools/cli/strategy/: strat_cli.py  (+1 more)
src/leettools/common/: temp_setup.py
src/leettools/flow/: exec_info.py  flow.py  flow_component.py  flow_option_items.py
src/leettools/svc/: main.py
src/leettools/web/: image_searcher.py  web_scraper.py  web_searcher.py
src/local/embedding/: README.md  local_embdedding_service.py  run.sh
tests/leettools/chat/: test_chat_manager.py
tests/leettools/cli/: test_cli_util.py
tests/leettools/common/: test_content_utils.py  test_csv_utils.py  test_dynamic_exec.py  test_dynamic_pydantic.py  test_factory_util.py  test_file_utils.py  test_i18n.py  test_json_utils.py  test_lang_utils.py  test_model_info.py  test_obj_utils.py  test_prompt_utils.py  test_time_utils.py
tests/leettools/flow/: test_citation_utils.py  test_csv_output.py  test_flow_news.py  test_flow_post.py  test_flow_util.py  test_flow_utils.py  test_step_extract_info.py  test_step_get_search_phrases.py  test_step_plan_topic_analytical.py  test_step_scrape_urls.py  test_step_summarize.py  test_step_vectdb_search.py
tests/leettools/svc/: test_chat_router.py  test_docsink_router.py  test_docsource_router.py  test_document_router.py  test_file_router.py  test_intention_router.py  test_job_router.py  test_kb_router.py  test_kb_router_share.py  test_md_router.py  test_org_router.py  test_prompt_router.py  test_segment_router.py  test_settings_router.py  test_strategy_router.py  test_svc_utils.py  test_task_router.py  test_user_router.py
tests/leettools/web/: test_bss_scraper.py
tests/scripts/: run.commands.sh
(+227 files in other folders)
