[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leettools"
version = "1.0.0"
authors = [
  { name="LeetTools-dev", email="leettools@gmail.com" },
]
description = "AI Search Workflow with Document Pipelines."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/leettools-dev/leettools"
"Bug Tracker" = "https://github.com/leettools-dev/leettools/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow : marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
line-length = 88
