[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leettools"
version = "1.0.0-alpha-20250116"
authors = [
  { name="LeetTools-dev", email="leettools@gmail.com" },
]
description = "AI Search Workflow with Document Pipelines."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.7",
    "Jinja2==3.1.3",
    "markdownify==0.13.1",
    "aiofiles==23.2.1",
    "pyyaml==6.0.2",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "Requests==2.32.3",
    "rich==13.9.4",
    "nltk==3.8.1",
    "psutil==5.9.8",
    "tldextract==5.1.3",
    "urllib3==2.2.3",
    "langdetect==1.0.9",
    "beautifulsoup4==4.12.3",
    "openai==1.57.2",
    "scipy==1.14.1",
    "sentence_transformers==2.5.1",
    "tiktoken==0.7.0",
    "duckdb==1.1.3",
    "docling==2.10.0",
    "docling_core==2.9.0",
    "chonkie==0.1.2",
]

[project.urls]
"Homepage" = "https://github.com/leettools-dev/leettools"
"Bug Tracker" = "https://github.com/leettools-dev/leettools/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow : marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
line-length = 88

[tool.setuptools]
include-package-data = true

[project.scripts]
leet = "leettools.cli.cli:main"